@startuml

abstract class AbstractDisplay {
    #open()
    #print()
    #close()
    +display()
}
class CharDisplay {
    +open()
    +print()
    +close()
}
class StringDisplay {
    +open()
    +print()
    +close()
    -printLine()
}

AbstractDisplay <|--CharDisplay
AbstractDisplay <|--StringDisplay

@enduml